- Styling: fixed collapsed panel-note border radius for v2.

--- a/RockWeb/Styles/styles-v2/components/_panels.scss
+++ b/RockWeb/Styles/styles-v2/components/_panels.scss
@@ -127,6 +127,12 @@
       border-top-right-radius: 0;
     }
   }
+  &.panel-note:not(:has(.note-new)) {
+    .panel-heading {
+      border-bottom: none;
+      border-radius: var(--rounded-medium);
+    }
+  }
 
   // If a panel is collapsed and has a tabbed bar, drawer, or sub-header, the border should stay.
   &.panel-collapsed:has(.tabbed-bar) .panel-heading,
